[package]
name = "gossipsub-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.50.0", features = ["full"] }
futures = "0.3.21"
async-std = { version = "1.10.0", features = ["attributes"] }
rand = "0.8.5"
